# cbrs

./: Cargo.toml  README.md  build.rs  fix.go  go.mod
cmd/stream-l3/: main.go
examples/: read-full.rs
fix-dicts/: production.xml  sandbox.xml
production/: generate.go
production/field/: fields.generated.go
production/fix42/: header.generated.go  trailer.generated.go
production/fix42/executionreport/: ExecutionReport.generated.go
production/fix42/heartbeat/: Heartbeat.generated.go
production/fix42/logon/: Logon.generated.go
production/fix42/logout/: Logout.generated.go
production/fix42/neworderbatch/: NewOrderBatch.generated.go
production/fix42/neworderlist/: NewOrderList.generated.go
production/fix42/newordersingle/: NewOrderSingle.generated.go
production/fix42/ordercancelbatchrequest/: OrderCancelBatchRequest.generated.go
production/fix42/ordercancelreplacerequest/: OrderCancelReplaceRequest.generated.go
production/fix42/ordercancelrequest/: OrderCancelRequest.generated.go
production/fix42/orderstatusrequest/: OrderStatusRequest.generated.go
production/fix42/quote/: Quote.generated.go
production/fix42/quoterequest/: QuoteRequest.generated.go
production/fix42/quoterequestreject/: QuoteRequestReject.generated.go
production/fix42/quoteresponse/: QuoteResponse.generated.go
production/fix42/quotestatusreport/: QuoteStatusReport.generated.go
sandbox/: generate.go
sandbox/enum/: enums.generated.go
sandbox/field/: fields.generated.go
sandbox/tag/: tag_numbers.generated.go
src/: lib.rs
testdata/: messages.json
(+22 files in other folders)
