[package]
name = "cbrs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tungstenite = { version = "0.18.0", features = ["rustls-tls-native-roots"] }
url = "2.3.1"
rust_decimal = { version = "1.28.1", features = ["serde"] }
rust_decimal_macros = { version = "1.28.1" }
tokio-tungstenite = { version = "0.19.0", features = ["rustls-tls-native-roots", "stream"] }
tokio = { version = "1.29.1", features = ["full"] }
futures-util = "0.3.28"
clap = { version = "4.3.11", features = ["derive"] }
